# modupdater

./: .gitignore  LICENSE  README.md  README.txt  SMAPI-latest.txt  SMAPIModUpdater.spec  Updater.code-workspace  build_exe.py  pyproject.toml
.github/workflows/: build.yml
Docs/: Linux_build.md  MacOS_build.md  README.md  Windows_build.md
smapi_mod_updater/: __init__.py  backup_manager.py  browser_launcher.py  config_manager.py  download_watcher.py  gui.py  log_parser.py  main.py  platform_utils.py  requirements.txt  session_logger.py
